infrastructure/kubernetes/base/gateway/kong.yaml
---
# Deployment Kong
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:3.6
          ports:
            - containerPort: 8000
              name: proxy
            - containerPort: 8001
              name: admin
          volumeMounts:
            - name: kong-config-rendered
              mountPath: /usr/local/kong/declarative
          readinessProbe:
            httpGet:
              path: /status
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              memory: 1Gi
              cpu: "500m"
            requests:
              memory: 256Mi
              cpu: "100m"
      volumes:
        - name: kong-config-template
          configMap:
            name: kong-declarative-config
        - name: kong-config-rendered
          emptyDir: {}
---
# Service Kong
apiVersion: v1
kind: Service
metadata:
  name: kong

spec:
  selector:
    app: kong
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
